improve roll template

--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -538,8 +538,8 @@
 							</div>
 							<div class="display">
 								<div class="name">
-									<button type="roll" name="skill" value="@{gm_toggle} &{template:rolls}{{header=@{skill}}}{{base=@{display_attribute}}}@{display_limit}{{dice=[[((@{dicepool}+@{attribute})+@{wound_toggle}+@{modifier_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifier_toggle}]]}}{{wound=[[@{wound_toggle}]]}}{{edge=[[@{edge_toggle}]]}}" ><span name="attr_display"></span></button>
-									<button class="spec-button" name="specialization" type="roll" value="@{gm_toggle} &{template:rolls}{{header=@{skill}}}{{base=@{display_attribute}}}{{dice=[[(@{dicepool}+@{attribute}+2+@{wound_toggle}+@{modifier_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=Spec: @{specialization}}}{{mod=[[@{modifier_toggle}]]}}{{wound=[[@{wound_toggle}]]}}{{edge=[[@{edge_toggle}]]}}"><span name="attr_display_specialization"></span></button>
+									<button type="roll" name="skill" value="@{gm_toggle} &{template:rolls}{{header=@{skill}}}{{base=@{display_attribute}}}{{desc=@{display_limit}}}{{dice=[[((@{dicepool}+@{attribute})+@{wound_toggle}+@{modifier_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifier_toggle}]]}}{{wound=[[@{wound_toggle}]]}}{{edge=[[@{edge_toggle}]]}}" ><span name="attr_display"></span></button>
+									<button class="spec-button" name="specialization" type="roll" value="@{gm_toggle} &{template:rolls}{{header=@{skill}}}{{base=@{display_attribute}}}@{display_limit}{{dice=[[(@{dicepool}+@{attribute}+2+@{wound_toggle}+@{modifier_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=Spec: @{specialization}, @{display_limit}}}{{mod=[[@{modifier_toggle}]]}}{{wound=[[@{wound_toggle}]]}}{{edge=[[@{edge_toggle}]]}}"><span name="attr_display_specialization"></span></button>
 								</div>
 								<div class="rank"><span name="attr_display_rating" title="Skill rating"></span></div>
 							</div>
@@ -587,8 +587,8 @@
 							</div>
 							<div class="display">
 								<div class="name">
-									<button type="roll" name="knowledge" value="@{gm_toggle} &{template:rolls}{{header=@{skill}}}{{base=@{display_attribute}}}{{dice=[[(@{dicepool}+@{attribute}+@{wound_toggle}+@{modifier_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifier_toggle}]]}}{{wound=[[@{wound_toggle}]]}}{{edge=[[@{edge_toggle}]]}}"><span name="attr_display"></span></button>
-									<button class="spec-button" name="knowledge specialization" type="roll" value="@{gm_toggle} &{template:rolls}{{header=@{skill}}}{{base=@{display_attribute}}}{{dice=[[(@{dicepool}+@{attribute}+2+@{wound_toggle}+@{modifier_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=Spec: @{specialization}}}{{mod=[[@{modifier_toggle}]]}}{{wound=[[@{wound_toggle}]]}}{{edge=[[@{edge_toggle}]]}}"><span name="attr_display_specialization"></span></button>
+									<button type="roll" name="knowledge" value="@{gm_toggle} &{template:rolls}{{header=@{skill}}}{{base=@{display_attribute}}}{{desc=@{display_limit}}}{{dice=[[(@{dicepool}+@{attribute}+@{wound_toggle}+@{modifier_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifier_toggle}]]}}{{wound=[[@{wound_toggle}]]}}{{edge=[[@{edge_toggle}]]}}"><span name="attr_display"></span></button>
+									<button class="spec-button" name="knowledge specialization" type="roll" value="@{gm_toggle} &{template:rolls}{{header=@{skill}}}{{base=@{display_attribute}}}{{dice=[[(@{dicepool}+@{attribute}+2+@{wound_toggle}+@{modifier_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=Spec: @{specialization}, @{display_limit}}}{{mod=[[@{modifier_toggle}]]}}{{wound=[[@{wound_toggle}]]}}{{edge=[[@{edge_toggle}]]}}"><span name="attr_display_specialization"></span></button>
 								</div>
 								<div class="rank"><span name="attr_display_rating" title="Skill rating"></span></div>
 							</div>
@@ -604,6 +604,17 @@
 								<option value="@{charisma}" data-i18n="charisma">Charisma</option>
 								<option value="@{magic}" data-i18n="magic">Magic</option>
 								<option value="@{resonance}" data-i18n="resonance">Resonance</option>
+							</select>
+							<input type="hidden" name="attr_display_limit" value="^{mental} ^{limit} @{mental_limit}" />
+							<select class="attr-select" name="attr_limit" title="Skill limit">
+								<option value="none">-</option>
+								<option value="@{mental_limit}" data-i18n="mental" selected>Mental</option>
+								<option value="@{physical_limit}" data-i18n="physical">Physical</option>
+								<option value="@{social_limit}" data-i18n="social">Social</option>
+								<option value="@{attack}" data-i18n="attack">Attack</option>
+								<option value="@{data_processing}" data-i18n="data_processing">Data Processing</option>
+								<option value="@{firewall}" data-i18n="firewall">Firewall</option>
+								<option value="@{sleaze}" data-i18n="sleaze">Sleaze</option>
 							</select>
 						</fieldset>
 					</div>
@@ -625,8 +636,8 @@
 							</div>
 							<div class="display">
 								<div class="name">
-									<button type="roll" name="language" value="@{gm_toggle} &{template:rolls}{{header=@{skill}}}{{base=@{display_attribute}}}{{dice=[[((@{dicepool}+@{attribute})+@{wound_toggle}+@{modifier_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifier_toggle}]]}}{{wound=[[@{wound_toggle}]]}}{{edge=[[@{edge_toggle}]]}}"><span name="attr_display"></span></button>
-									<button class="spec-button" name="language specialization" type="roll" value="@{gm_toggle} &{template:rolls}{{header=@{skill}}}{{base=@{display_attribute}}}{{dice=[[(@{dicepool}+@{attribute}+2+@{wound_toggle}+@{modifier_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=Spec: @{specialization}}}{{mod=[[@{modifier_toggle}]]}}{{wound=[[@{wound_toggle}]]}}{{edge=[[@{edge_toggle}]]}}"><span name="attr_display_specialization"></span></button>
+									<button type="roll" name="language" value="@{gm_toggle} &{template:rolls}{{header=@{skill}}}{{base=@{display_attribute}}}{{desc=@{display_limit}}}{{dice=[[((@{dicepool}+@{attribute})+@{wound_toggle}+@{modifier_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifier_toggle}]]}}{{wound=[[@{wound_toggle}]]}}{{edge=[[@{edge_toggle}]]}}"><span name="attr_display"></span></button>
+									<button class="spec-button" name="language specialization" type="roll" value="@{gm_toggle} &{template:rolls}{{header=@{skill}}}{{base=@{display_attribute}}}{{dice=[[(@{dicepool}+@{attribute}+2+@{wound_toggle}+@{modifier_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=Spec: @{specialization}, @{display_limit}}}{{mod=[[@{modifier_toggle}]]}}{{wound=[[@{wound_toggle}]]}}{{edge=[[@{edge_toggle}]]}}"><span name="attr_display_specialization"></span></button>
 								</div>
 								<div class="rank"><span name="attr_display_rating" title="Skill rating"></span></div>
 							</div>
@@ -642,6 +653,17 @@
 								<option value="@{charisma}" data-i18n="charisma">Charisma</option>
 								<option value="@{magic}" data-i18n="magic">Magic</option>
 								<option value="@{resonance}" data-i18n="resonance">Resonance</option>
+							</select>
+							<input type="hidden" name="attr_display_limit" value="^{social} ^{limit} @{mental_limit}" />
+							<select class="attr-select" name="attr_limit" title="Skill limit">
+								<option value="none">-</option>
+								<option value="@{mental_limit}" data-i18n="mental">Mental</option>
+								<option value="@{physical_limit}" data-i18n="physical">Physical</option>
+								<option value="@{social_limit}" data-i18n="social" selected>Social</option>
+								<option value="@{attack}" data-i18n="attack">Attack</option>
+								<option value="@{data_processing}" data-i18n="data_processing">Data Processing</option>
+								<option value="@{firewall}" data-i18n="firewall">Firewall</option>
+								<option value="@{sleaze}" data-i18n="sleaze">Sleaze</option>
 							</select>
 						</fieldset>
 					</div>
@@ -3789,8 +3811,10 @@
 	        		} else {
 						const translation = getTranslationByKey(`${limit}`);
 	        			setAttrs({
-	                       [`${field}_display_limit`]: `{{desc=${translation} ${eventinfo.newValue}}}`
+	                       [`${field}_display_limit`]: `${translation} ${eventinfo.newValue}`
 	                    });
+
+	                    console.log(`${field}_display_limit : ${translation} ${eventinfo.newValue}`);
 	        		}
 	        	} else if (source.includes("specialization") && type === "player")  {	
 	        		getAttrs([`${source}`], (v) => {
