* Fix: Life energy calculation takes constitution stat into account only once * Fixes kreuvf/roll20-character-sheets#37
This bug was introduced with the last update, when the first parts were converted to sheet worker scripts. The old values prior to the errorneous version should automatically reappear upon re-opening of the sheet.

--- a/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.html
@@ -15609,8 +15609,8 @@ on("sheet:opened change:wound_kopf change:wound_ra change:wound_la change:wound_
             'asp_max': Math.ceil((+v.mu_basis + +v.in_basis + +v.ch_basis) / 2) + +v.aspzugek,
             'ausgrundw': Math.ceil((+v.mu_basis + +v.ko_basis + +v.ge_basis) / 2),
             'aus_max': Math.ceil((+v.mu_basis + +v.ko_basis + +v.ge_basis) / 2) + +v.auszugek,
-            'legrundw': Math.ceil((+v.ko_basis + +v.kk_basis) / 2),
-            'le_max': Math.ceil((+v.ko_basis + +v.kk_basis) / 2) + +v.lezugek,
+            'legrundw': Math.ceil(+v.ko_basis + (+v.kk_basis / 2)),
+            'le_max': Math.ceil(+v.ko_basis + (+v.kk_basis / 2)) + +v.lezugek,
             'mrgrundw': Math.round((+v.mu_basis + +v.kl_basis + +v.ko_basis) / 5),
             'mr_max': Math.round((+v.mu_basis + +v.kl_basis + +v.ko_basis) / 5) + +v.mrzugek,
             'ueberanstrengung_max': +v.ko_basis,
