* Inform users about the latest issue/fix

--- a/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.html
@@ -12815,6 +12815,9 @@
             <input type="text" class="sheet-selectable-text" style="width: 45em" value="https://www.youtube.com/watch?v=l2SCwz51T9g&list=PLGBXxa8pcNCqzNe4CrKvy-_QgjfgLDOZ-" />
         </p>
 
+        <h4>Update auf Version 20190513</h4>
+        <p>Beim letzten Update hatte sich ein Fehler bei der Berechnung der Lebensenergie eingeschlichen, der in dieser Version behoben wurde. Tut mir leid :(</p>
+
         <h4>Update auf Version 20190427</h4>
         <p>Gaben und Metatalente wurden verändert, sodass eine Migration der alten Daten notwendig wurde. Spalten für spezielle Erfahrungen (SE) wurden entfernt, da diese ausschließlich für die Steigerung relevant sind, Steigerungen aber seitens Roll20 nicht im Charakterbogen umgesetzt sein dürfen. Um die Information dauerhafter zu speichern, empfiehlt es sich die Notizen zu benutzen. Spezielle Erfahrungen in Metatalenten sind darüber hinaus nicht regelkonform.</p>
         <h5>Gaben</h5>
