[Ryuutama]: removing dupe description

--- a/Ryuutama/Ryuutama.html
+++ b/Ryuutama/Ryuutama.html
@@ -1072,7 +1072,7 @@
                         <div class='sheet-row'>
                             <div class='sheet-col skillCheck classSkillRoll'>
                                 Roll:
-                                <button type='roll' value='&{template:skillCheck} {{season=@{currentSeason}}} {{name=@{farmerSkillName}}} {{die1=[[1d@{farmerSkillDie1}]]}} {{die2=[[1d@{farmerSkillDie2}]]}} {{bonusesAndPenalties=[[@{farmerSkillMod}-1+@{classSkillBonus}[Class Bonus][Class Bonus]+@{applyTerrain}[Terrain]+@{applyWeather}[Weather]-@{overburdenPenalty}[Overburden]]]}}' name='roll_farmerSkillRoll'></button>
+                                <button type='roll' value='&{template:skillCheck} {{season=@{currentSeason}}} {{name=@{farmerSkillName}}} {{die1=[[1d@{farmerSkillDie1}]]}} {{die2=[[1d@{farmerSkillDie2}]]}} {{bonusesAndPenalties=[[@{farmerSkillMod}-1+@{classSkillBonus}[Class Bonus]+@{applyTerrain}[Terrain]+@{applyWeather}[Weather]-@{overburdenPenalty}[Overburden]]]}}' name='roll_farmerSkillRoll'></button>
                                 <select name="attr_farmerSkillDie1" class="attributeType">
                                     <option value="@{currentStr}">STR</option>
                                     <option value="@{currentDex}">DEX</option>
