[DSA4.1] Hotfix: Calculation of life energy (#5073)
* * Fix: Life energy calculation takes constitution stat into account only once
* Fixes kreuvf/roll20-character-sheets#37

This bug was introduced with the last update, when the first parts were converted to sheet worker scripts. The old values prior to the errorneous version should automatically reappear upon re-opening of the sheet.

* * Inform users about the latest issue/fix

* * Bump character sheet version number

--- a/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.html
@@ -12815,6 +12815,9 @@
             <input type="text" class="sheet-selectable-text" style="width: 45em" value="https://www.youtube.com/watch?v=l2SCwz51T9g&list=PLGBXxa8pcNCqzNe4CrKvy-_QgjfgLDOZ-" />
         </p>
 
+        <h4>Update auf Version 20190513</h4>
+        <p>Beim letzten Update hatte sich ein Fehler bei der Berechnung der Lebensenergie eingeschlichen, der in dieser Version behoben wurde. Tut mir leid :(</p>
+
         <h4>Update auf Version 20190427</h4>
         <p>Gaben und Metatalente wurden verändert, sodass eine Migration der alten Daten notwendig wurde. Spalten für spezielle Erfahrungen (SE) wurden entfernt, da diese ausschließlich für die Steigerung relevant sind, Steigerungen aber seitens Roll20 nicht im Charakterbogen umgesetzt sein dürfen. Um die Information dauerhafter zu speichern, empfiehlt es sich die Notizen zu benutzen. Spezielle Erfahrungen in Metatalenten sind darüber hinaus nicht regelkonform.</p>
         <h5>Gaben</h5>
@@ -12920,7 +12923,7 @@
     </div>
 
 
-    <b>&bdquo;Das Schwarze Auge&ldquo;-Heldenbogen für Roll20.net, Version <input type="text" class="sheet-stat-immutable sheet-stat-immutable-version" disabled="disabled" name="attr_character_sheet_version" value="20190427"><input type="hidden" class="sheet-stat-immutable sheet-stat-immutable-version" readonly="readonly" name="attr_data_version" value="20171014"></b>
+    <b>&bdquo;Das Schwarze Auge&ldquo;-Heldenbogen für Roll20.net, Version <input type="text" class="sheet-stat-immutable sheet-stat-immutable-version" disabled="disabled" name="attr_character_sheet_version" value="20190513"><input type="hidden" class="sheet-stat-immutable sheet-stat-immutable-version" readonly="readonly" name="attr_data_version" value="20171014"></b>
     <br><b>Autoren: Gereon Heinemann (Original), Patrick Gebhardt, Steven 'Kreuvf' Koenig, apehead.</b>
     <br><b>Dank an: G V., Kai, SepDepp</b>
     </table>
@@ -15609,8 +15612,8 @@ on("sheet:opened change:wound_kopf change:wound_ra change:wound_la change:wound_
             'asp_max': Math.ceil((+v.mu_basis + +v.in_basis + +v.ch_basis) / 2) + +v.aspzugek,
             'ausgrundw': Math.ceil((+v.mu_basis + +v.ko_basis + +v.ge_basis) / 2),
             'aus_max': Math.ceil((+v.mu_basis + +v.ko_basis + +v.ge_basis) / 2) + +v.auszugek,
-            'legrundw': Math.ceil((+v.ko_basis + +v.kk_basis) / 2),
-            'le_max': Math.ceil((+v.ko_basis + +v.kk_basis) / 2) + +v.lezugek,
+            'legrundw': Math.ceil(+v.ko_basis + (+v.kk_basis / 2)),
+            'le_max': Math.ceil(+v.ko_basis + (+v.kk_basis / 2)) + +v.lezugek,
             'mrgrundw': Math.round((+v.mu_basis + +v.kl_basis + +v.ko_basis) / 5),
             'mr_max': Math.round((+v.mu_basis + +v.kl_basis + +v.ko_basis) / 5) + +v.mrzugek,
             'ueberanstrengung_max': +v.ko_basis,
