fixed a subtraction bug

--- a/Mutant Year Zero Alternative/MutantYearZeroAlternative.html
+++ b/Mutant Year Zero Alternative/MutantYearZeroAlternative.html
@@ -1342,7 +1342,7 @@
     const damage_update = (attrs) => {
         let update = {};
         getAttrs(attrs, (values) => {
-            update[`${attrs[1]}_total`] = values[`${attrs[0]}`] - values[`${attrs[1]}`];
+            update[`${attrs[1]}_total`] = (values[`${attrs[0]}`]) - values[`${attrs[1]}`];
             update[`${attrs[1]}_max`] = values[`${attrs[0]}`];
             setAttrs(update);
         });
