--- a/Mutant Year Zero Alternative/MutantYearZeroAlternative.html
+++ b/Mutant Year Zero Alternative/MutantYearZeroAlternative.html
@@ -1352,10 +1352,10 @@
     const damage_update = (attrs) => {
         const attr   = attrs[0]; //This will be strength, agility, wits, or empathy
         const trauma = attrs[1]; //This will be damage, fatigue, confusion, or doubt
-        let update = {};
         getAttrs([`${attr}`,`${attr}_max`], (values) => {
-            update[`${trauma}`] = (parseInt(values[`${attr}_max`])) - parseInt(values[`${attr}`]);
-            setAttrs(update);
+            setAttrs({
+                [`${trauma}`]:  parseInt(values[`${attr}_max`]) - parseInt(values[`${attr}`])
+            });
         });
     };
 </script>
