Forbidden Lands v1.2 - carry calc fix, pack rat option
- fixed carry calc (should use base strength, not damaged strength)
- added pack rat talent option that adjusts carry amount

--- a/Forbidden_Lands/Forbidden_Lands.htm
+++ b/Forbidden_Lands/Forbidden_Lands.htm
@@ -1,5 +1,5 @@
-<!--4/14/19'-->
-<input type="hidden" name="attr_version" value="1.1">
+<!--5/15/19'-->
+<input type="hidden" name="attr_version" value="1.2">
 
 <!--tabs-->
 <input class="tab character" name="attr_tab" title="Character" type="radio" value="1" checked/>
@@ -698,14 +698,25 @@
                 </div>
                 <div class="gear-box6 header">
                     <div class="gear-subgrid">
-                        <div class="gear-box7"><span class="label" data-i18n="carry">Carry</span></div>
-                        <div class="gear-box8"><input class="input-number" type="text" name="attr_carry" value="(2*(@{strength_total}))" title="@{carry} = 2 x strength_total" disabled /></div>
+                        <div class="gear-box7"><span class="label" data-i18n="carry">Carry</span></div>                        
+                        <div class="gear-box8"><input class="input-number" type="text" name="attr_carry" value="(2*(@{strength})+@{pack_rat})" title="@{carry} = 2 x @{strength} + @{pack_rat}" disabled /></div>
                         <div class="gear-box9"><span class="label" data-i18n="encumbrance">Encumbrance</span></div>
                         <div class="gear-box10">
                             <input type="hidden" name="attr_character_gear_encumbrance" value="0" />
                             <input class="input-number" type="text" name="attr_character_encumbrance" value="0" title="@{character_encumbrance}" readonly />
                         </div>
                     </div>
+                </div>
+            </div>
+            <div class="gear-subgrid2">
+                <div class="gear-box12"><span class="label" data-i18n-title="pack-rat-title" data-i18n="pack-rat">Pack Rat Talent?</span></div>
+                <div class="gear-box13">
+                    <select class="input" name="attr_pack_rat">
+                        <option value="0" data-i18n="no" selected>No</option>
+                        <option value="2" data-i18n="rank-1-pack-rat">Rank 1 (+2)</option>
+                        <option value="5" data-i18n="rank-2-pack-rat">Rank 2 (+5)</option>
+                        <option value="10" data-i18n="rank-3-pack-rat">Rank 3 (+10)</option>
+                    </select>
                 </div>
             </div>
         </div>
