uc-114 fix tiebreakers

--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
@@ -9403,6 +9403,8 @@
                     final_init = parseFloat(final_init.toPrecision(12)); // ROUNDING ERROR BUGFIX
                 }
                 update["initiative_bonus"] = final_init;
+                console.log(`%c UPDATE ${final_init}`,"color:green;font-size:16px");
+                console.log(update);
                 setAttrs(update, {silent: true});
             });
         });
