uc-114 added back code

--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
@@ -9391,6 +9391,10 @@
                         });
                     }
                 });
+
+                if(final_init % 1 != 0) {
+                    final_init = parseFloat(final_init.toPrecision(12)); // ROUNDING ERROR BUGFIX
+                }
                 update["initiative_bonus"] = final_init;
                 setAttrs(update, {silent: true});
             });
