MY:Zero; minor translation fixes

--- a/Mutant Year Zero Alternative/MutantYearZeroAlternative.html
+++ b/Mutant Year Zero Alternative/MutantYearZeroAlternative.html
@@ -634,7 +634,7 @@
                 <div class="sheet-singlecell">
                     <table class="sheet-table-onecolumn">
                         <tr style="background-image:url('http://i.imgur.com/kBDTVGn.jpg');">
-                            <td class="sheet-text-header" data-i18n="armo-u" >ARMOR</td>
+                            <td class="sheet-text-header" data-i18n="armor-u" >ARMOR</td>
                             <td class="sheet-text-header-smaller" data-i18n="rating" >Rating</td>
                         </tr>
                         <tr class="sheet-row-light">
@@ -664,7 +664,7 @@
                 <div class="sheet-twocell-bottompadding">
                     <table class="sheet-table-twocolumn">
                         <tr style="background-image: url('http://i.imgur.com/RyI1F67.jpg')">
-                            <td class="sheet-text-header"         data-i18n="gea-u" >GEAR</td>
+                            <td class="sheet-text-header"         data-i18n="gear-u" >GEAR</td>
                             <td class="sheet-text-header-smaller" data-i18n="encumberance" >Encumberance</td>
                             <td class="sheet-text-header-smaller" data-i18n="rating" >Rating</td>
                             <td class="sheet-text-header-smaller" data-i18n="amount" >Amount
@@ -677,11 +677,11 @@
                             </td>
                             <td align="center" valign="middle" width="130">
                                 <select name="attr_gear-encumberance">
-                                    <option value="0"  >0 - Tiny</option>
-                                    <option value="0.5">1/2 - Light</option>
-                                    <option value="1"  >1 - Basic</option>
-                                    <option value="2"  >2 - Heavy</option>
-                                    <option value="3"  >3 - Very Heavy</option>
+                                    <option value="0" data-i18n="tiny-o"     >0 - Tiny</option>
+                                    <option value="0.5" data-i18n="light-o"  >1/2 - Light</option>
+                                    <option value="1" data-i18n="basic-o"    >1 - Basic</option>
+                                    <option value="2" data-i18n="heavy-o"    >2 - Heavy</option>
+                                    <option value="3" data-i18n="veryheavy-o">3 - Very Heavy</option>
                                 </select>
                             </td>
                             <td align="center" width="86">
@@ -703,11 +703,11 @@
                                 </td>
                                 <td align="center" class="sheet-table-notop" valign="middle" width="130">
                                     <select name="attr_gearencumberance">
-                                      <option value="0"  >0 - Tiny</option>
-                                      <option value="0.5">1/2 - Light</option>
-                                      <option value="1"  >1 - Basic</option>
-                                      <option value="2"  >2 - Heavy</option>
-                                      <option value="3"  >3 - Very Heavy</option>
+                                      <option value="0" data-i18n="tiny-o"     >0 - Tiny</option>
+                                      <option value="0.5" data-i18n="light-o"  >1/2 - Light</option>
+                                      <option value="1" data-i18n="basic-o"    >1 - Basic</option>
+                                      <option value="2" data-i18n="heavy-o"    >2 - Heavy</option>
+                                      <option value="3" data-i18n="veryheavy-o">3 - Very Heavy</option>
                                     </select>
                                 </td>
                                 <td align="center" class="sheet-table-notop" width="86">
@@ -744,11 +744,11 @@
                             </td>
                             <td align="center" width="130">
                                 <select name="attr_weapon-range-1">
-                                    <option value="1" data-i18n="arm"     >Arm's Length</option>
-                                    <option value="2" data-i18n="near"    >Near</option>
-                                    <option value="3" data-i18n="short"   >Short</option>
-                                    <option value="4" data-i18n="long"    >Long</option>
-                                    <option value="5" data-i18n="distant" >Distant</option>
+                                  <option value="1" data-i18n="arms-length">Arm's Length</option>
+                                  <option value="2" data-i18n="near"       >Near</option>
+                                  <option value="3" data-i18n="short"      >Short</option>
+                                  <option value="4" data-i18n="long"       >Long</option>
+                                  <option value="5" data-i18n="distant"    >Distant</option>
                                 </select>
                             </td>
                             <td>
@@ -770,11 +770,11 @@
                                 </td>
                                 <td align="center" class="sheet-table-notop" width="130">
                                     <select name="attr_weapon-range-repeating">
-                                      <option value="1" data-i18n="arm"    >Arm's Length</option>
-                                      <option value="2" data-i18n="near"   >Near</option>
-                                      <option value="3" data-i18n="short"  >Short</option>
-                                      <option value="4" data-i18n="long"   >Long</option>
-                                      <option value="5" data-i18n="distant">Distant</option>
+                                      <option value="1" data-i18n="arms-length">Arm's Length</option>
+                                      <option value="2" data-i18n="near"       >Near</option>
+                                      <option value="3" data-i18n="short"      >Short</option>
+                                      <option value="4" data-i18n="long"       >Long</option>
+                                      <option value="5" data-i18n="distant"    >Distant</option>
                                     </select>
                                 </td>
                                 <td class="sheet-table-notop">
@@ -791,7 +791,7 @@
                             <td class="sheet-text-header-smaller" width="70" data-i18n="buddy" >Buddy</td>
                         </tr>
                         <tr class="sheet-row-light">
-                            <td class="sheet-text-label table-noright">PC:</td>
+                            <td class="sheet-text-label table-noright" data-i18n="pc">PC:</td>
                             <td class="sheet-table-noleft">
                                 <input class="sheet-textinput-pcs" name="attr_pcrelationark-1" type="text">
                             </td>
@@ -803,7 +803,7 @@
                     <fieldset class="repeating_relationships">
                         <table class="sheet-table-twocolumn sheet-table-notop">
                             <tr class="sheet-row-light sheet-table-notop">
-                                <td class="sheet-text-label sheet-table-noright sheet-table-notop">PC:</td>
+                                <td class="sheet-text-label sheet-table-noright sheet-table-notop" data-i18n="pc">PC:</td>
                                 <td class="sheet-table-noleft sheet-table-notop">
                                     <input class="sheet-textinput-pcs" name="attr_relationship-repeating" type="text">
                                 </td>
@@ -841,7 +841,7 @@
                 <div class="sheet-theark">
                     <table class="sheet-table-twocolumn">
                         <tr class="sheet-text-header" style="background-image:url('http://i.imgur.com/Lts9PYc.jpg');">
-                            <td colspan="4" data-i18n="the-ar-u" >THE ARK</td>
+                            <td colspan="4" data-i18n="the-ark-u" >THE ARK</td>
                         </tr>
                         <tr class="sheet-row-light">
                             <td class="sheet-text-label sheet-table-noright" width="30px" data-i18n="type" >Type:</td>
@@ -967,7 +967,7 @@
                 <div class="sheet-bosses">
                     <table class="sheet-table-twocolumn">
                         <tr style="background-image:url('http://i.imgur.com/tF6WcF3.jpg');">
-                            <td class="sheet-text-header" width="250px" data-i18n="bosse-u" >BOSSES</td>
+                            <td class="sheet-text-header" width="250px" data-i18n="bosses-u" >BOSSES</td>
                             <td class="sheet-text-header-smaller"       data-i18n="type" >Type</td>
                         </tr>
                         <tr class="sheet-row-light">
@@ -1011,7 +1011,7 @@
                 <div class="sheet-otherinfo">
                     <table class="sheet-table-onecolumn">
                         <tr style="background-image:url('http://i.imgur.com/IMRQXgW.jpg');">
-                            <td class="sheet-text-header" colspan="2" data-i18n="other-informatio-u" >OTHER INFORMATION</td>
+                            <td class="sheet-text-header" colspan="2" data-i18n="other-info-u" >OTHER INFORMATION</td>
                         </tr>
                         <tr class="sheet-row-dark sheet-text-stats">
                             <td class="sheet-text-label" width="85px" data-i18n="population" >Population</td>
