update image links, fix versioning

--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -8,7 +8,7 @@
 <!-- ~~~~~~~~+:+:::::+:+::+:+:::::+:+::+:+:+::+:+:+:+::+:+:::::+:+:::::+:+:+:+:::::+:+::+:+:+::+:+:+:+::+::+:+:+~~~~~~~~ -->
 <div class="tabs">
 	<div class="info-box">
-		<img src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Shadowrun5thEdition/ShadowrunLogo.png" style="max-height: 200px;" />
+		<img src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Shadowrun5thEdition/images/ShadowrunLogo.png" style="max-height: 200px;" />
 		<div>
 			<h1 data-i18n="character">Character</h1><input type="text" name="attr_character_name" placeholder="Character name" title="@{character_name}" />
 			<h1 data-i18n="player">Player</h1><input type="text" name="attr_player_name" placeholder="Player name" title="@{player_name}" />
@@ -699,7 +699,7 @@
 						<!-- Ammo removal button -->
 						<button name="act_shots_remove" type="action">4</button>
 						<button type="action" name="act_primary_ammo" title="Shots Fired">
-							<img src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Shadowrun5thEdition/gun.png" /><span name="attr_shots_fired"></span>
+							<img src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Shadowrun5thEdition/images/gun.png" /><span name="attr_shots_fired"></span>
 						</button>
 						<button name="act_shots_add" type="action">4</button>
 					</div>
@@ -3118,9 +3118,9 @@
 
     const versioning = (version) => {
     	console.log(`%c Shadowrun 5th Edition versioning, ${version}`, "color: blue; font-weight:bold");
-       if (version => 1.41) {
+       if (version >= 1.41) {
 			console.log(`%c Shadowrun 5th Edition is update to date`, "color: red; font-weight:bold");
-       	} else if (version => 1.4) {
+       	} else if (version >= 1.4) {
        		const toggles = [`wound_toggle`, `edge_toggle`, `modifier_toggle`];
 			getAttrs(toggles, (v) => {
 				let set = {};
@@ -3131,7 +3131,7 @@
 				setAttrs(set);
 			});
        		setAttrs({version: 1.41}, () => {versioning(1.41)});
-        } else if (version => 1.35) {
+        } else if (version >= 1.35) {
         	getAttrs(["sheet_type"], (v) => {
         		let update = {};
         		(v.sheet_type === "goon") ? update["sheet_type"] = "grunt" : false;
@@ -3150,7 +3150,6 @@
 			setAttrs({
 				shots_fired: (shots > 0 && trigger.includes("remove")) ? shots -= 1 : trigger.includes("add") ? shots += 1 : shots
 			});
-			console.log(`%c SHOTS FIRED ${shots}`, "color:green; font-size: 16px");
 		});
 	});
 
