--- a/Mutant Year Zero Alternative/MutantYearZeroAlternative.html
+++ b/Mutant Year Zero Alternative/MutantYearZeroAlternative.html
@@ -409,8 +409,8 @@
                         </tr>
                         <tr class="sheet-row-dark">
                             <td class="sheet-table-noright sheet-text-stats" colspan="4">
-                                <button type="roll"  name='roll_fight' class="sheet-right-roll"
-                                        value='&{template:default} {{name=Custom Roll}}  {{ Base Dice= [[[[@{advroll_base_success}+0]]d1cs1cf2>0+ [[@{advroll_base_fail}+0]]d1cs2cf1>6+ [[@{advroll_base_start}-@{advroll_base_success}-@{advroll_base_fail}+0]]d6>6]]}}  {{ Skill Dice= [[[[@{advroll_skill_success}+0]]d1cs1cf2>0+ [[@{advroll_skill_fail}+0]]d1cs2cf1>6+ [[@{advroll_skill_start}-@{advroll_skill_success}-@{advroll_skill_fail}+0]]d6>6]]}} {{ Gear Dice= [[[[@{advroll_gear_success}+0]]d1cs1cf2>0+ [[@{advroll_gear_fail}+0]]d1cs2cf1>6+ [[@{advroll_gear_start}-@{advroll_gear_success}-@{advroll_gear_fail}+0]]d6>6]]}}'
+                                <button type="roll"  name='roll_advanced' class="sheet-right-roll"
+                                        value='&{template:default} {{name=Advanced Roll}}  {{ Base Dice= [[[[@{advroll_base_success}+0]]d1cs1cf2>0+ [[@{advroll_base_fail}+0]]d1cs2cf1>6+ [[@{advroll_base_start}-@{advroll_base_success}-@{advroll_base_fail}+0]]d6>6]]}}  {{ Skill Dice= [[[[@{advroll_skill_success}+0]]d1cs1cf2>0+ [[@{advroll_skill_fail}+0]]d1cs2cf1>6+ [[@{advroll_skill_start}-@{advroll_skill_success}-@{advroll_skill_fail}+0]]d6>6]]}} {{ Gear Dice= [[[[@{advroll_gear_success}+0]]d1cs1cf2>0+ [[@{advroll_gear_fail}+0]]d1cs2cf1>6+ [[@{advroll_gear_start}-@{advroll_gear_success}-@{advroll_gear_fail}+0]]d6>6]]}}'
                                 ></button>
                             </td>
                         </tr>
