--- a/Call_of_Cthulhu_7th_Ed/coc_7th_ed.html
+++ b/Call_of_Cthulhu_7th_Ed/coc_7th_ed.html
@@ -34,11 +34,15 @@
 	    <div>
 	        <input type="checkbox" class="sheet-toggledr" name="attr_toggledr" value="1">Common Dice Rolls
 	        <input type="checkbox" class="sheet-togglearmor" name="attr_togglearmor" value="1">Armor
-	        <input type="checkbox" class="sheet-togglecompanions" name="attr_togglecompanions" value="1">Companions & Mounts
+	    </div>
+	    <div>
+	        <input type="checkbox" class="sheet-togglecompanions" name="attr_togglecompanions" value="1">NPCs(Companions,Mounts,etc)
+	        <input type="checkbox" class="sheet-hide" name="attr_sheet-hide">Hide Sheet
 	    </div>
     </div>
 </div>
 
+<input type="checkbox" style="display:none" class="sheet-hide" name="attr_sheet-hide">
 <!------------------------- Char Info and Characteristics ------------------------->
 <div class='sheet-2colrow'>
     <div class='sheet-col'>
@@ -3733,7 +3737,9 @@
     <input type="checkbox" style="display:none" class="sheet-showskills" name="attr_showskills" value="3">
     <input type="checkbox" style="display:none" class="sheet-showskills" name="attr_showskills" value="6">
     <input type="checkbox" style="display:none" class="sheet-showskills" name="attr_showskills" value="4">
+    <input type="checkbox" style="display:none" class="sheet-hide" name="attr_sheet-hide">
     <h4 class="section-head" data-i18n="combat-u">Combat</h4>
+    <input type="checkbox" style="display:none" class="sheet-hide" name="attr_sheet-hide">
     <div class="section">
 
 <!------------------------- Invictus Combat ------------------------->
@@ -4688,7 +4694,7 @@
     </div>
 </div>
 
-<!------------------------- Companions ------------------------->
+<!------------------------- Companions (NPCs)------------------------->
 <div class='sheet-colrow'>
     <input type="checkbox" class="sheet-togglecompanions" style="display:none" name="attr_togglecompanions" value="1">
     <div class="sheet-companions">
@@ -4700,7 +4706,7 @@
         <input type="checkbox" style="display:none" class="sheet-showskills" name="attr_showskills" value="3">
         <input type="checkbox" style="display:none" class="sheet-showskills" name="attr_showskills" value="6">
         <input type="checkbox" style="display:none" class="sheet-showskills" name="attr_showskills" value="4">
-    <h4 class="section-head" data-i18n="companions&mounts-u">Companions & Mounts</h4>
+    <h4 class="section-head" data-i18n="companions&mounts-u">NPCs</h4>
 		<div class="sheet-section">
 		    <fieldset class="repeating_minion">
 		        <div class="sheet-row">
