--- a/Call_of_Cthulhu_7th_Ed/coc_7th_ed.html
+++ b/Call_of_Cthulhu_7th_Ed/coc_7th_ed.html
@@ -3,7 +3,7 @@
     <input class="sheet-HideConfig" type="checkbox" checked name="attr_is_config"/><span class="sheet-is-config"><span style='font-family:"Pictos";'>y</span></span>
     <div class="sheet-config" style="text-align:left">
         <div style="text-align:left"><b>Era Selection</b></div>
-	    <input type="checkbox" style="display:none" lass="sheet-showskills" name="attr_showskills" value="7"><span style="display:none">Invictuss</span>
+	    <input type="checkbox" style="display:none" lass="sheet-showskills" name="attr_showskills" value="7"><span style="display:none">Invictus</span>
 	    <input type="checkbox" style="display:none" lass="sheet-showskills" name="attr_showskills" value="1"><span style="display:none">Dark Ages</span>
 	    <input type="checkbox" style="display:none" class="sheet-showskills" name="attr_showskills" value="5"><span style="display:none">Old West</span>
 	    <input type="checkbox" style="display:none" class="sheet-showskills" name="attr_showskills" value="2" checked="checked"><span style="display:none">1920's</span>
