--- a/Low Fantasy Gaming/LFGSheet.html
+++ b/Low Fantasy Gaming/LFGSheet.html
@@ -275,13 +275,17 @@
                         </div>
                     </div>
                     <div class="sheet-col-1-2 sheet-padr">
+                        <input type="hidden" class="sheet-newinit" name="attr_newinit_toggle" />
                         <div class="sheet-center sheet-small-label sheet-vert-bottom sheet-sub-header">Initiative</div>
-                        <!--<input class="sheet-oldinit" type="checkbox" name="attr_oldinit_toggle" value="1">
                         <div class="sheet-section-oldinit">
                             <div class="sheet-row">
-                                <div class="sheet-col-1-2 sheet-small-label sheet-center">
+                                <div class="sheet-col-1-6 sheet-small-label sheet-center">
+                                    <input type="checkbox" name="attr_newinit_toggle" value="1" checked>
+                                    Dlx
+                                </div>
+                                <div class="sheet-col-1-3 sheet-small-label sheet-center">
                                     <input class="sheet-underlined" type="number" name="attr_initiative" step="1" value="0">
-                                    Misc Bonus
+                                    +Misc
                                 </div>
             				   <div class="sheet-col-1-3 sheet-small-label sheet-center">
                                     <select name="attr_oldinitiativeadvantage">
@@ -292,18 +296,22 @@
                                     <br/>Advantage
                                 </div>
                                 <div class="sheet-col-1-6 sheet-small-label sheet-center">
-                                    <button type="roll" name="roll_Initiative" value="&{template:5eDefault} {{title=Initiative}} {{subheader=@{character_name}}} {{rollname=Initiative}} {{roll=[[ @{oldinitiativeadvantage}+(@{initiative})+(?{Modifier|0}) &{tracker} ]]}}"></button>
+                                    <button type="roll" name="roll_ClassicInitiative" value="&{template:5eDefault} {{ability=1}} {{title=Classic Initiative Roll}} {{subheader=@{character_name}}} {{roll=[[ @{oldinitiativeadvantage}+(@{initiative}) &{tracker} ]]}}"></button>
                                     <div class="sheet-tiny-spacer"></div>Roll
                                 </div>
                             </div>
-                        </div>-->
+                        </div>
                         <div class=" sheet-section-newinit">
                             <div class="sheet-row">
-                                <div class="sheet-col-5-12 sheet-small-label sheet-center">
+                                <div class="sheet-col-1-6 sheet-small-label sheet-center">
+                                    <input type="checkbox" name="attr_newinit_toggle" value="1" checked>
+                                    Dlx
+                                </div>
+                                <div class="sheet-col-1-3 sheet-small-label sheet-center">
                                     <input class="sheet-underlined" type="number" name="attr_initiative" step="1" value="0">
                                     +Misc
                                 </div>
-                                <div class="sheet-col-5-12 sheet-small-label sheet-center">
+                                <div class="sheet-col-1-3 sheet-small-label sheet-center">
                                     <select name="attr_initiativeadvantage">
                                         <option value="2d20cs=1cf=20kl1">ADV</option>
                                         <option value="1d20cs=1cf=20" selected>NO</option>
@@ -312,8 +320,7 @@
                                     <br/>Advantage
                                 </div>
     				            <div class="sheet-col-1-6 sheet-small-label sheet-center">
-                                    <!--<button type="roll" name="roll_Initiative" value="&{template:5eDefault} {{ability=1}} {{title=Initiative Check}} {{subheader=@{character_name}}} {{roll=[[@{dexterity}-(@{initiativeadvantage}-(?{Modifier|0})-(@{initiative}))]]}}"></button>-->
-                                    <button type="roll" name="roll_Initiative" value="&{template:5eDefault} {{ability=1}} {{title=Initiative Check}} {{subheader=@{character_name}}} {{check=[[@{initiativeadvantage}-(@{initiative})]]}} {{target=[[@{dexterity}]]}} {{gsresult=[[@{dexterity_gs}]]}} {{tfresult=[[@{dexterity_tf}]]}}"></button>
+                                    <button type="roll" name="roll_DeluxeInitiative" value="&{template:5eDefault} {{ability=1}} {{title=Initiative Check}} {{subheader=@{character_name}}} {{check=[[@{initiativeadvantage}-(@{initiative})]]}} {{target=[[@{dexterity}]]}} {{gsresult=[[@{dexterity_gs}]]}} {{tfresult=[[@{dexterity_tf}]]}}"></button>
                                     <div class="sheet-tiny-spacer"></div>Roll
                                 </div>
                             </div>
@@ -1190,6 +1197,12 @@
 			<p class="sheet-rt-emote">{{character_name}} {{emote}}</p>
 			{{/emote}}
 			<div class="sheet-main-content">
+                {{#roll}}
+				<div class="sheet-row">
+					<div class="sheet-col-5-12 sheet-padl sheet-padr sheet-rt-key">Result</div>
+					<div class="sheet-col-7-12 sheet-padr sheet-rt-value">{{roll}}</div>
+				</div>
+				{{/roll}}
 				{{#check}}
                     <div class="sheet-row">
                         <div class="sheet-col-5-12 sheet-padl sheet-padr sheet-rt-key">Check</div>
